--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,11 +12,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  convert: ^3.0.0
-  protobuf: ^2.0.0
-  rxdart: ^0.26.0
-  collection: ^1.15.0
-  meta: ^1.3.0
+#  convert: ^3.0.0
+  convert: any
+#  protobuf: ^2.0.0
+  protobuf: any
+#  rxdart: ^0.26.0
+  rxdart: any
+  #collection: ^1.15.0
+  collection: any
+#  meta: ^1.3.0
+  meta: any
 
 dev_dependencies:
   flutter_test:
