删除数据流相关

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -10,7 +10,7 @@ buildscript {
 
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.0'
-        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.15'
+//        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.15'
     }
 }
 
@@ -23,46 +23,41 @@ rootProject.allprojects {
 }
 
 apply plugin: 'com.android.library'
-apply plugin: 'com.google.protobuf'
+//apply plugin: 'com.google.protobuf'
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 29
 
     defaultConfig {
         minSdkVersion 19
     }
-    sourceSets {
-        main {
-            proto {
-                srcDir '../protos'
-            }
-        }
-    }
-//    repositories {
-//        flatDir {
-//            dirs 'libs'
+//    sourceSets {
+//        main {
+//            proto {
+//                srcDir '../protos'
+//            }
 //        }
 //    }
-
 }
 
-protobuf {
-    protoc {
-        artifact = 'com.google.protobuf:protoc:3.11.4'
-    }
-    generateProtoTasks {
-        all().each { task ->
-            task.builtins {
-                java {
-                    option "lite"
-                }
-            }
-        }
-    }
-}
+//protobuf {
+////    protoc {
+////        artifact = 'com.google.protobuf:protoc:3.0.1'
+////    }
+//    generateProtoTasks {
+//        all().each { task ->
+//            task.builtins {
+//                java {
+//                    option "lite"
+//                }
+//            }
+//        }
+//    }
+//}
 
 dependencies {
-    implementation 'com.google.protobuf:protobuf-javalite:3.11.4'
+//    implementation 'com.google.protobuf:protobuf-javalite:3.11.4'
+//    implementation 'com.google.protobuf:protobuf-lite:3.0.1'
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
@@ -78,6 +73,8 @@ dependencies {
 
 
 
+}
+
 
 //    provided files('libs/sensorlib-release1.0.1.aar')
 //    implementation files('libs/sensorlib-release1.0.1.aar')
@@ -89,5 +86,3 @@ dependencies {
 //
 //    compileOnly files('libs/sensorlib-release1.0.1.aar')
 
-
-}
